Correction of equations that overflow. Used the property overflow with auto.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 	max-width:600px;
 	border-left:3px #808080 solid;
 	padding:3px;
+	overflow:auto;
 }
 .Theorem:before{
 	content:"Theorem " counter(theorem) ".\00a0\00a0";
@@ -40,11 +41,17 @@
 	font-weight:bold;
 }
 
+.equation
+{
+	overflow:auto;
+}
+
 .importantEquation
 {
 	background-color: #dbd7d7;
 	padding-top:1px;
 	padding-bottom:1px;
+	overflow: auto;
 }
 
 #PhotoDePresentation
